<resources>
    <string name="app_name">Pointer</string>

    <!-- Common Strings -->
    <string name="unexpectedError">An unexpected error occurred, please try later.</string>
    <string name="loginLengthError">ERROR: Username must not be longer than 255 characters or shorter than 1.</string>
    <string name="loginAlreadyRegisteredError">ERROR: Username is already registered.</string>
    <string name="emailLengthError">ERROR: Email must not be longer than 255 characters or shorter than 1.</string>
    <string name="emailPatternError">ERROR: Email must match the following pattern: example@example.example</string>
    <string name="emailAlreadyRegisteredError">ERROR: Email is already registered.</string>
    <string name="passwordLengthError">ERROR: Password must not be longer than 255 characters or shorter than 6.</string>
    <string name="passwordsDoNotMatchError">ERROR: Password fields must match.</string>
    <string name="biographyLengthError">ERROR: Biography must not be longer than 255 characters.</string>
    <string name="fullNameLengthError">ERROR: Full name must not be longer than 255 characters or shorter than 1.</string>
    <string name="back">Back</string>

    <!-- Profile images -->
    <string name="badass_coffee_avatar">Badass coffee cup</string>
    <string name="crazy_ass_avocado_avatar">Crazy-ass avocado</string>
    <string name="crazy_ass_sheep_avatar">Crazy-ass sheep</string>
    <string name="wasted_zombie_avatar">Wasted zombie</string>
    <string name="punky_avatar">Punky guy</string>
    <string name="normal_guy_avatar">Just a normal guy</string>
    <string name="puritan_nun_avatar">Puritan nun</string>
    <string name="donald_trump_avatar">Donald Trump</string>
    <string name="marilyn_monroe_avatar">Marilyn Monroe</string>
    <string name="heisenberg_avatar">Heisenberg</string>
    <string name="high_af_harley_quinn_avatar">High af Harley Quinn</string>

    <!-- LogIn -->
    <string name="logIn_credentialsError">Incorrect username or password.</string>
    <string name="logIn_emptyFieldsError">Both fields must be filed to log in.</string>
    <string name="logIn_forgotPassword">I forgot my password</string>
    <string name="logIn_wrongUserPrivilege">Only clients are allowed in the application.</string>

    <!-- SignUp -->
    <string name="signUp_successfulSignUp">Successfully signed up.</string>

    <!-- Client Profile Activity -->
    <string name="clientProfile_successfulProfileUpdate">The profile was updated successfully.</string>
    <string name="clientProfile_editProfileButton">EDIT PROFILE</string>
    <string name="clientProfile_saveChangesButton">SAVE CHANGES</string>
    <string name="clientProfile_profileImage">Profile image:</string>
    <string name="clientProfile_fullNameHint">Full Name</string>
    <string name="clientProfile_biographyHint">Biography</string>
    <string name="clientProfile_deleteAccount">DELETE ACCOUNT</string>
    <string name="clientProfile_successfulDelete">Account successfully deleted.</string>

    <!-- Forgot Password Activity -->
    <string name="forgotPassword_emailHint">Email address</string>
    <string name="forgotPassword_confirmEmailHint">Confirm email address</string>
    <string name="forgotPassword_resetPassword">RESET PASSWORD</string>
    <string name="forgotPassword_emailNotRegistered">We could not fiend an account associated with that email.</string>
    <string name="forgotPassword_passwordReset">An email with the new password was sent.</string>
    <string name="forgotPassword_EmailsDoNotMatch">The email addresses do not match.</string>

    <!-- Event Card Layout -->
    <string name="date">Date</string>
    <string name="event_name">Event name</string>
    <string name="event_organizer">Event organizer</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="club">Club</string>
    <string name="artists">Artists</string>
    <string name="ratings">Ratings</string>
    <string name="rating_comment">Rating comment</string>
    <string name="save_rating">Save rating</string>
    <string name="saved_rating">Rating saved successfully</string>
    <string name="add_wishlist">Add to wishlist</string>
    <string name="remove_wishlist">Remove from wishlist</string>

    <!-- Change Password Activity -->
    <string name="changePassword_title">CHANGE PASSWORD</string>
    <string name="changePassword_writeOldPassword">Write your old password</string>
    <string name="changePassword_writeNewPassword">Write your new password</string>
    <string name="changePassword_rewriteNewPassword">Rewrite your new password</string>
    <string name="changePassword_passwordChanged">The password was changed successfully.</string>
    <string name="changePassword_notPasswordChanged">The password was not changed.</string>
    <string name="changePassword_passwordDoNotMatch">The passwords do not match.</string>

    <!-- Search Activity -->
    <string name="searchByArtist">Search by artist: </string>
    <string name="typeArtist">Type artist name</string>
    <string name="searchByClub">Search by club: </string>
    <string name="typeClub">Type club: </string>
    <string name="searchByDate">Search by date: </string>
    <string name="selectDate">Select date</string>
    <string name="search">Search</string>
</resources>