<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EventActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/badass_coffee_avatar"
        app:srcCompat="@drawable/badass_coffee_avatar"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="158dp" />

    <TextView
        android:id="@+id/placeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="259dp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="324dp" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="291dp" />

    <TextView
        android:id="@+id/ratingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratings"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="392dp" />

    <TextView
        android:id="@+id/artistsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artists"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/clubTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/club"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="228dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="426dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="494dp" />

</androidx.constraintlayout.widget.ConstraintLayout>