<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <TextView
        android:id="@+id/txtSearchLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchByClub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="163dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSearchArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchByArtist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <LinearLayout
        android:id="@+id/linearLayoutNavigationBar"
        android:layout_width="416dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingLeft="10px"
        android:paddingRight="10px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonHomeClientProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/home_icon"
            tools:srcCompat="@drawable/home_icon" />

        <ImageButton
            android:id="@+id/imageButtonSearchHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/search_icon"
            tools:srcCompat="@drawable/search_icon" />

        <ImageButton
            android:id="@+id/imageButtonWishlistClientProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/star_icon"
            tools:srcCompat="@drawable/star_icon" />

        <ImageButton
            android:id="@+id/imageButtonProfileClientProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/profile_icon"
            tools:srcCompat="@drawable/profile_icon" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtArtistName"
        android:layout_width="371dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:hint="@string/typeArtist"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearchArtist" />

    <EditText
        android:id="@+id/txtClub"
        android:layout_width="371dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/typeClub"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSearchLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>